--- a/src/plugins/contrib/ProjectOptionsManipulator/ProjectOptionsManipulator_wx31_64.cbp
+++ b/src/plugins/contrib/ProjectOptionsManipulator/ProjectOptionsManipulator_wx31_64.cbp
@@ -33,15 +33,17 @@
 			<Add option="-mthreads" />
 			<Add option="-fmessage-length=0" />
 			<Add option="-fexceptions" />
+			<Add option="-std=gnu++11" />
+			<Add option='-include &quot;sdk.h&quot;' />
+			<Add option="-Winvalid-pch" />
 			<Add option="-DBUILDING_PLUGIN" />
-			<Add option="-DHAVE_W32API_H" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DcbDEBUG" />
-			<Add option="-DNOPCH" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-DwxUSE_UNICODE" />
-			<Add option="-std=gnu++11" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
