--- a/src/plugins/contrib/devpak_plugin/DevPakPlugin_wx31_64.cbp
+++ b/src/plugins/contrib/devpak_plugin/DevPakPlugin_wx31_64.cbp
@@ -34,14 +34,16 @@
 					<Add option="$(#CB_RELEASE_TYPE)" />
 					<Add option="-mthreads" />
 					<Add option="-fexceptions" />
+					<Add option='-include &quot;sdk.h&quot;' />
+					<Add option="-Winvalid-pch" />
 					<Add option="-DBUILDING_PLUGIN" />
-					<Add option="-DNOPCH" />
-					<Add option="-DHAVE_W32API_H" />
+					<Add option="-DCB_PRECOMP" />
 					<Add option="-D__WXMSW__" />
 					<Add option="-D_WIN64" />
 					<Add option="-DWXUSINGDLL" />
 					<Add option="-DcbDEBUG" />
 					<Add option="-DwxUSE_UNICODE" />
+					<Add directory="../../../.objs31_64/include" />
 					<Add directory="../../../include" />
 					<Add directory="../../../include/tinyxml" />
 				</Compiler>
