--- a/src/plugins/contrib/profiler/cbprofiler_wx31_64.cbp
+++ b/src/plugins/contrib/profiler/cbprofiler_wx31_64.cbp
@@ -30,15 +30,16 @@
 			<Add option="-mthreads" />
 			<Add option="-fexceptions" />
 			<Add option="-fpermissive" />
+			<Add option="-std=gnu++11" />
+			<Add option="-Winvalid-pch" />
 			<Add option="-DBUILDING_PLUGIN" />
-			<Add option="-DNOPCH" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DcbDEBUG" />
 			<Add option="-DwxUSE_UNICODE" />
-			<Add option="-std=gnu++11" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
