--- a/src/plugins/contrib/regex_testbed/RegExTestbed_wx31_64.cbp
+++ b/src/plugins/contrib/regex_testbed/RegExTestbed_wx31_64.cbp
@@ -39,8 +39,9 @@
 			<Add option="-fmessage-length=0" />
 			<Add option="-fexceptions" />
 			<Add option="-mthreads" />
-			<Add option="-DNOPCH" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option="-std=gnu++11" />
+			<Add option="-Winvalid-pch" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
@@ -48,9 +49,9 @@
 			<Add option="-DBUILDING_PLUGIN" />
 			<Add option="-DcbDEBUG" />
 			<Add option="-DSUPPORT_UTF8" />
-			<Add option="-std=gnu++11" />
 			<Add directory="$(#WX31_64.include)" />
 			<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
