--- a/src/plugins/contrib/wxSmith/wxSmith_wx31_64.cbp
+++ b/src/plugins/contrib/wxSmith/wxSmith_wx31_64.cbp
@@ -46,16 +46,18 @@
 			<Add option="-fmessage-length=0" />
 			<Add option="-fexceptions" />
 			<Add option="-std=gnu++11" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option='-include &quot;sdk.h&quot;' />
+			<Add option="-Winvalid-pch" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DcbDEBUG" />
-			<Add option="-DNOPCH" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-DBUILDING_PLUGIN" />
 			<Add option="-DwxUSE_UNICODE" />
 			<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
 			<Add directory="$(#WX31_64.include)" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
