cb_koders_wx31_64.cbp: Convert to PCH build

--- a/src/plugins/contrib/cb_koders/cb_koders_wx31_64.cbp
+++ b/src/plugins/contrib/cb_koders/cb_koders_wx31_64.cbp
@@ -35,17 +35,18 @@
 			<Add option="-mthreads" />
 			<Add option="-m64" />
 			<Add option="-fno-keep-inline-dllexport" />
+			<Add option="-std=gnu++11" />
+			<Add option="-Winvalid-pch" />
 			<Add option="-DcbDEBUG" />
-			<Add option="-DNOPCH" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DwxUSE_UNICODE" />
 			<Add option="-D_WIN64" />
 			<Add option="-DBUILDING_PLUGIN" />
-			<Add option="-std=gnu++11" />
 			<Add directory="$(#WX31_64.include)" />
 			<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
