--- a/src/plugins/contrib/help_plugin/help-plugin_wx31_64.cbp
+++ b/src/plugins/contrib/help_plugin/help-plugin_wx31_64.cbp
@@ -50,9 +50,9 @@
 					<Add option="-mthreads" />
 					<Add option="-fmessage-length=0" />
 					<Add option="-fexceptions" />
+					<Add option="-Winvalid-pch" />
 					<Add option="-DBUILDING_PLUGIN" />
-					<Add option="-DNOPCH" />
-					<Add option="-DHAVE_W32API_H" />
+					<Add option="-DCB_PRECOMP" />
 					<Add option="-D__WXMSW__" />
 					<Add option="-D_WIN64" />
 					<Add option="-DWXUSINGDLL" />
@@ -88,6 +88,7 @@
 			<Add option="-std=gnu++11" />
 			<Add directory="$(#WX31_64.include)" />
 			<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
