--- a/src/plugins/contrib/MouseSap/MouseSap_wx31_64.cbp
+++ b/src/plugins/contrib/MouseSap/MouseSap_wx31_64.cbp
@@ -21,9 +21,9 @@
 					<Add option="-mthreads" />
 					<Add option="-fmessage-length=0" />
 					<Add option="-fexceptions" />
+					<Add option="-Winvalid-pch" />
 					<Add option="-DBUILDING_PLUGIN" />
-					<Add option="-DNOPCH" />
-					<Add option="-DHAVE_W32API_H" />
+					<Add option="-DCB_PRECOMP" />
 					<Add option="-D__WXMSW__" />
 					<Add option="-D_WIN64" />
 					<Add option="-DWXUSINGDLL" />
@@ -31,6 +31,7 @@
 					<Add option="-DwxUSE_UNICODE" />
 					<Add directory="$(#WX31_64.include)" />
 					<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+					<Add directory="../../../.objs31_64/include" />
 					<Add directory="../../../include" />
 					<Add directory="../../../include/tinyxml" />
 					<Add directory="../../../sdk/wxscintilla/include" />
