--- a/src/plugins/contrib/lib_finder/lib_finder_wx31_64.cbp
+++ b/src/plugins/contrib/lib_finder/lib_finder_wx31_64.cbp
@@ -33,21 +33,22 @@
 			<Add option="-fmessage-length=0" />
 			<Add option="-fexceptions" />
 			<Add option="-mthreads" />
+			<Add option="-std=gnu++11" />
+			<Add option='-include &quot;sdk.h&quot;' />
+			<Add option="-Winvalid-pch" />
 			<Add option="-DcbDEBUG" />
-			<Add option="-DNOPCH" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DwxUSE_UNICODE" />
 			<Add option="-DBUILDING_PLUGIN" />
-			<Add option="-std=gnu++11" />
 			<Add directory="$(#WX31_64.include)" />
 			<Add directory="$(#WX31_64.lib)/gcc_dll$(WX_CFG)/msw$(WX_SUFFIX)" />
+			<Add directory="../../../.objs31_64/include" />
 			<Add directory="../../../include" />
 			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../sdk/wxscintilla/include" />
-			<Add directory="../../../include/tinyxml" />
 			<Add directory="../../../include/scripting/include" />
 			<Add directory="../../../include/scripting/sqplus" />
 			<Add directory="../../../include/scripting/squirrel" />
