--- a/src/plugins/contrib/source_exporter/Exporter_wx31_64.cbp
+++ b/src/plugins/contrib/source_exporter/Exporter_wx31_64.cbp
@@ -16,7 +16,12 @@
 				<Option projectCompilerOptionsRelation="2" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
+					<Add option='-include &quot;wx_pch.h&quot;' />
+					<Add option="-Winvalid-pch" />
 					<Add option="-DWXMAKINGLIB_PDFDOC" />
+					<Add option="-DUSE_PCH" />
+					<Add directory="../../../.objs31_64/plugins/contrib/wxContribItems/pch" />
+					<Add directory="../wxContribItems/pch" />
 				</Compiler>
 			</Target>
 			<Target title="makefont">
@@ -58,7 +63,6 @@
 			<Target title="default">
 				<Option output="../../../devel31_64/share/CodeBlocks/plugins/Exporter" prefix_auto="0" extension_auto="1" />
 				<Option object_output="../../../.objs31_64/plugins/contrib/source_exporter" />
-				<Option external_deps="wxPdfDocument/lib31_64/wxPdfDocument.a;" />
 				<Option type="3" />
 				<Option compiler="gcc" />
 				<Option parameters="--debug-log --multiple-instance -na -ns -nd -p debug" />
@@ -66,9 +70,12 @@
 				<Option run_host_application_in_terminal="0" />
 				<Option projectLinkerOptionsRelation="2" />
 				<Compiler>
+					<Add option='-include &quot;sdk.h&quot;' />
+					<Add option="-Winvalid-pch" />
 					<Add option="-DBUILDING_PLUGIN" />
-					<Add option="-DNOPCH" />
+					<Add option="-DCB_PRECOMP" />
 					<Add option="-DcbDEBUG" />
+					<Add directory="../../../.objs31_64/include" />
 					<Add directory="../../../include" />
 					<Add directory="../../../include/tinyxml" />
 					<Add directory="../../../sdk/wxscintilla/include" />
@@ -101,7 +108,6 @@
 			<Add option="-mthreads" />
 			<Add option="-fexceptions" />
 			<Add option="-std=gnu++11" />
-			<Add option="-DHAVE_W32API_H" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-D_WIN64" />
 			<Add option="-DWXUSINGDLL" />
