* build: Convert CodeBlocks_wx31_64.cbp to PCH build (Thanks stahta01)
Remove define of HAVE_W32API_H this is no longer needed with wxWidgets 3.0 and up.
( wxWidgets sets the value if needed in "include/wx/msw/gccpriv.h" )
Add define of NOPCH to scintilla target to prevent wxprec.h from acting like PCH file.

--- a/src/CodeBlocks_wx31_64.cbp
+++ b/src/CodeBlocks_wx31_64.cbp
@@ -93,6 +93,7 @@
 					<Add option="-DLINK_LEXERS" />
 					<Add option="-DSCI_LEXER" />
 					<Add option="-DWXMAKINGDLL_SCI" />
+					<Add option="-DNOPCH" />
 					<Add directory="sdk/wxscintilla/src/scintilla/include" />
 					<Add directory="sdk/wxscintilla/src/scintilla/src" />
 					<Add directory="sdk/wxscintilla/src/scintilla/lexlib" />
@@ -717,11 +718,11 @@
 			<Add option="-fmessage-length=0" />
 			<Add option="-fexceptions" />
 			<Add option="-std=gnu++11" />
-			<Add option="-DHAVE_W32API_H" />
+			<Add option="-Winvalid-pch" />
 			<Add option="-D__WXMSW__" />
 			<Add option="-DWXUSINGDLL" />
 			<Add option="-DcbDEBUG" />
-			<Add option="-DNOPCH" />
+			<Add option="-DCB_PRECOMP" />
 			<Add option="-DwxUSE_UNICODE" />
 			<Add option="-D_WIN64" />
 			<Add directory="$(#WX31_64.include)" />
@@ -1258,6 +1259,7 @@
 			<Option target="sdk" />
 		</Unit>
 		<Unit filename="include/sdk.h">
+			<Option compile="1" />
 			<Option weight="1" />
 			<Option target="src" />
 		</Unit>
@@ -1268,6 +1270,7 @@
 			<Option target="sdk" />
 		</Unit>
 		<Unit filename="include/sdk_precomp.h">
+			<Option compile="1" />
 			<Option weight="0" />
 			<Option target="sdk" />
 		</Unit>
